--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Home</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,7 +16,229 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="b-page">
+    <div id="main">
+        <header>
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"><img src="img/belcorp.png"></a>
+                        <div class="cnt-city"><span></span> En Lima, Perú</div>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right user-list">
+                            <li><a href="#"><span class="user"></span> Nicolas</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div class="fluid-list wrapper">
+                <div class="container">
+                    <div class="fluid-list item-category">
+                        <span>Restaurantes</span>
+                        <ul class="reset-ul">
+                            <li><a href="#">Salud y Belleza</a></li>
+                            <li><a href="#">Viajes</a></li>
+                            <li><a href="#">Productos</a></li>
+                            <li><a href="#">Puntos</a></li>
+                            <li><a href="#">Premios</a></li>
+                            <li><a href="#">Otros</a></li>
+                        </ul>
+                    </div>
+                    <div class="fluid-list cnt-productos">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">S/20</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Tanta</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Bon Beef</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">S/20</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Tanta</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Bon Beef</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">S/20</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Tanta</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Bon Beef</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Veggie Pizza</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">S/20</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Tanta</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">50% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                            <div class="col-md-4">
+                                <article class="item-product">
+                                    <h2><a href="#" title="">Bon Beef</a></h2>
+                                    <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
+                                    <div class="fluid-list b-prec">30% dscto</div>
+                                    <figure>
+                                        <a href="#" title="">
+                                            <img src="img/item.jpg" alt="" />
+                                        </a>
+                                    </figure>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="fluid-list bloque-f">
+                            <h4>EMPRESAS</h4>
+                            <ul class="reset-ul">
+                                <li><a href="#">Servicio</a></li>
+                                <li><a href="#">Políticas de privacidad</a></li>
+                                <li><a href="#">Blog</a></li>
+                            </ul>
+                        </div>    
+                    </div>
+                    <div class="col-md-4">
+                        <div class="fluid-list bloque-f">
+                            <h4>CONTACTO</h4>
+                            <ul class="reset-ul">
+                                <li><a href="#">mail@bewow.pe</a></li>
+                                <li>01 896745</li>
+                            </ul>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
