--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                             <li></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right user-list">
-                            <li><a href="#"><span class="user"></span> Nicolas</a></li>
+                            <li>
+                                <a href=# class="dropdown-toggle" id="drop3" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="user"></span> Nicolas <span class=caret></span> </a> 
+                                <ul class="dropdown-menu" aria-labelledby="drop3"> 
+                                    <li><a href="#">Mi perfil</a></li>
+                                    <li><a href="#">Cerrar sesión</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
