--- a/mis-puntos.html
+++ b/mis-puntos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Index 404</title>
+    <title>Mis puntos</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -37,11 +37,11 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right user-list">
                             <li>
-                            	<a href=# class="dropdown-toggle" id="drop3" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="user"></span> Nicolas <span class=caret></span> </a> 
-                            	<ul class="dropdown-menu" aria-labelledby="drop3"> 
-                        			<li><a href="#">Mi perfil</a></li>
-                        			<li><a href="#">Cerrar sesión</a></li>
-                        		</ul>
+                                <a href=# class="dropdown-toggle" id="drop3" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="user"></span> Nicolas <span class=caret></span> </a> 
+                                <ul class="dropdown-menu" aria-labelledby="drop3"> 
+                                    <li><a href="#">Mi perfil</a></li>
+                                    <li><a href="#">Cerrar sesión</a></li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
@@ -51,9 +51,49 @@
         <section>
             <div class="fluid-list wrapper">
                 <div class="container">
-                    <div class="fluid-list cnt-ups">
-                    	<img src="img/ups.png">
-                    	<p>Waaa! no se encontró nada.</p>
+                    <div class="fluid-list cnt-perfil-user">
+                    	<div class="fluid-list user-nav">
+                            <ul class="reset-ul">
+                                <li><a href="#">Perfil</a></li>
+                                <li><a href="#" class="active">Mis puntos</a></li>
+                                <li><a href="#">Mis premios</a></li>
+                            </ul>
+                        </div>
+                        <div class="fluid-list cnt-puntos">
+                            <div class="fluid-list cnt-filter-s">
+                                <select class="form-control">
+                                    <option>Estado de cuenta</option>
+                                    <option>Estado de cuenta 1</option>
+                                    <option>Estado de cuenta 2</option>
+                                </select>        
+                            </div>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Fecha</th>
+                                        <th>Concepto</th>
+                                        <th>Puntos</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
