--- a/cupon.html
+++ b/cupon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Index 404</title>
+    <title>Cupon</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,7 +36,13 @@
                             <li></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right user-list">
-                            <li><a href="#"><span class="user"></span> Nicolas</a></li>
+                            <li>
+                            	<a href=# class="dropdown-toggle" id="drop3" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="user"></span> Nicolas <span class=caret></span> </a> 
+                            	<ul class="dropdown-menu" aria-labelledby="drop3"> 
+                        			<li><a href="#">Mi perfil</a></li>
+                        			<li><a href="#">Cerrar sesión</a></li>
+                        		</ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
