--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                                 </ul>
                             </li>
                         </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <form class="search-custon">
+                                    <input type="text" name="" class="form-control form-search" placeholder="Buscar">
+                                    <button type="submit" class="btn-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                </form>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
