--- a/all-modal.html
+++ b/all-modal.html
@@ -42,6 +42,14 @@
                                 </ul>
                             </li>
                         </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <form class="search-custon">
+                                    <input type="text" name="" class="form-control form-search" placeholder="Buscar">
+                                    <button type="submit" class="btn-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                </form>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -194,10 +202,6 @@
 		      		<div class="form-group">
 		      			<label>¿Pregunta número uno?</label>
                         <input type="text" class="form-control" id="rest1" placeholder="Respuesta">
-                    </div>
-                    <div class="form-group">
-		      			<label>¿Pregunta número dos?</label>
-                        <input type="text" class="form-control" id="rest2" placeholder="Respuesta">
                     </div>
 		      		<div class="fluid-list m-footer">
                     	<button type="submit" class="btn btn-belcorp">Enviar</button>
