--- a/index-404.html
+++ b/index-404.html
@@ -69,7 +69,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>EMPRESAS</h4>
                             <ul class="reset-ul">
@@ -79,7 +79,7 @@
                             </ul>
                         </div>    
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>CONTACTO</h4>
                             <ul class="reset-ul">
