--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="fluid-list cnt-productos">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -84,7 +84,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -96,7 +96,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -108,9 +108,7 @@
                                     </figure>
                                 </article>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -122,7 +120,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -134,7 +132,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -146,9 +144,7 @@
                                     </figure>
                                 </article>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -160,7 +156,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -172,7 +168,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -184,9 +180,7 @@
                                     </figure>
                                 </article>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Veggie Pizza</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -198,7 +192,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Tanta</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -210,7 +204,7 @@
                                     </figure>
                                 </article>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="item-product">
                                     <h2><a href="#" title="">Bon Beef</a></h2>
                                     <p>Zermatt is famed as a mounering and ski destome banmdo liono</p>
@@ -230,7 +224,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>EMPRESAS</h4>
                             <ul class="reset-ul">
@@ -240,7 +234,7 @@
                             </ul>
                         </div>    
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>CONTACTO</h4>
                             <ul class="reset-ul">
