--- a/login-dni.html
+++ b/login-dni.html
@@ -56,7 +56,7 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>EMPRESAS</h4>
                             <ul class="reset-ul">
@@ -66,7 +66,7 @@
                             </ul>
                         </div>    
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <div class="fluid-list bloque-f">
                             <h4>CONTACTO</h4>
                             <ul class="reset-ul">
