--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
                 <div class="container">
                     <div class="fluid-list item-category">
                         <span>Restaurantes</span>
-                        <ul class="reset-ul">
-                            <li><a href="#">Salud y Belleza</a></li>
-                            <li><a href="#">Viajes</a></li>
-                            <li><a href="#">Productos</a></li>
-                            <li><a href="#">Puntos</a></li>
-                            <li><a href="#">Premios</a></li>
-                            <li><a href="#">Otros</a></li>
-                        </ul>
+                        <div class="cnt-content-list-cat">
+                            <div class="list-cat-cnt">
+                                <ul class="reset-ul">
+                                    <li><a href="#">Salud y Belleza</a></li>
+                                    <li><a href="#">Viajes</a></li>
+                                    <li><a href="#">Productos</a></li>
+                                    <li><a href="#">Puntos</a></li>
+                                    <li><a href="#">Premios</a></li>
+                                    <li><a href="#">Otros</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="fluid-list cnt-productos">
                         <div class="row">
