--- a/all-modal.html
+++ b/all-modal.html
@@ -17,7 +17,7 @@
 <body class="b-page">
     <div id="main">
         <header>
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default custom-nav-bar">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -30,9 +30,6 @@
                         <div class="cnt-city"><span></span> En Lima, Perú</div>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li></li>
-                        </ul>
                         <ul class="nav navbar-nav navbar-right user-list">
                             <li>
                                 <a href=# class="dropdown-toggle" id="drop3" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="user"></span> Nicolas <span class=caret></span> </a> 
@@ -42,13 +39,18 @@
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
+                        <ul class="nav navbar-nav navbar-right nav-search-f">
                             <li>
                                 <form class="search-custon">
                                     <input type="text" name="" class="form-control form-search" placeholder="Buscar">
                                     <button type="submit" class="btn-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                                 </form>
                             </li>
+                        </ul>
+                        <ul class="reset-ul list-menu-m">
+                            <li><a href="#">Cambiar Ubicación</a></li>
+                            <li><a href="#">Mi perfil</a></li>
+                            <li><a href="#">Cerrar sesión</a></li>
                         </ul>
                     </div>
                 </div>
