--- a/registro-email.html
+++ b/registro-email.html
@@ -19,21 +19,10 @@
 <body>
     <div id="main">
         <header>
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default custom-nav-bar">
                 <div class="container">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
                         <a class="navbar-brand" href="#"><img src="img/belcorp.png"></a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li></li>
-                        </ul>
                     </div>
                 </div>
             </nav>
