--- a/all-modal.html
+++ b/all-modal.html
@@ -121,7 +121,7 @@
 	<div class="modal fade custon-modal" id="oneModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
-		    	<span class="glyphicon glyphicon-star star-ico" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list cnt-logo-m">
 		        	<img src="img/logo-modal.png">
 		      	</div>
@@ -140,7 +140,7 @@
     <div class="modal fade custon-modal" id="twoModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
-		    	<span class="glyphicon glyphicon-star star-ico" aria-hidden="true"></span>
+		    	<span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list logo-cupon">
     				<span><img src="img/logo-cupon.png"></span> Tanta
     			</div>
@@ -175,7 +175,7 @@
     <div class="modal fade custon-modal" id="threeModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
-		    	<span class="glyphicon glyphicon-star star-ico" aria-hidden="true"></span>
+		    	<span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list cnt-logo-m">
 		        	<img src="img/logo-modal.png">
 		      	</div>
@@ -196,7 +196,7 @@
     <div class="modal fade custon-modal" id="fourModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
-		    	<span class="glyphicon glyphicon-star star-ico" aria-hidden="true"></span>
+		    	<span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list cnt-logo-m">
 		        	<img src="img/logo-modal.png">
 		      	</div>
@@ -217,6 +217,7 @@
     <div class="modal fade custon-modal" id="fiveModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
+                <span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		    	<p class="desc">Recuerda que cada descarga es una opción utilizada de tus premios asiganos.</p>
 		      	<form class="cnt-form-tw">
 		      		<p class="m-text">Ingresa el email donde deseas recibir el cupón.</p>
@@ -277,7 +278,7 @@
     <div class="modal fade custon-modal" id="sixModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
-		    	<span class="glyphicon glyphicon-star star-ico" aria-hidden="true"></span>
+		    	<span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list logo-cupon">
     				<span><img src="img/logo-cupon.png"></span> Tanta
     			</div>
@@ -350,6 +351,7 @@
     <div class="modal fade custon-modal" id="sevenModal" tabindex="-1" role="dialog" aria-labelledby="oneModalLabel">
 	  	<div class="modal-dialog" role="document">
 		    <div class="modal-content">
+                <span class="glyphicon glyphicon-remove star-ico" data-dismiss="modal" aria-label="Close" aria-hidden="true"></span>
 		      	<div class="fluid-list cnt-logo-m">
 		        	<img src="img/logo-modal.png">
 		      	</div>
